changes to lemon

--- a/newlemon.html
+++ b/newlemon.html
@@ -127,6 +127,7 @@
               <div class="col-md-6">
                 <br>
                 <iframe width="600" height="470" id="moveit" src="https://www.youtube.com/embed/eXoqYQcqAIE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p class="description1">concept video</p>
               </div>
 
               <div class="col-md-12">
@@ -135,71 +136,50 @@
               <div class="col-md-6">
                 <br>
                 <p id="rowoverview2">03 Approach</p>
-                <p id="subheader"><b>gathering food waste statistics</b></p>
+                <p id="subheader"><b>initial research</b></p>
                 <p class="description1">Today, food waste is an important problem. It has a <b>major financial impact, impacts food security, and affects the climate and resource conservation.</b><br></br><br></br>Food that could be used to feed hungry families is instead sent to landfills, eventually adding up to <b>8% of global greenhouse gas emissions.</b></p>
               </div>
               <div class="col-md-6">
                 <br>
                 <img  id="facts" src="images/lemon/facts.png" alt="Image placeholder" width="90%">
               </div>
-              <div class="col-md-6">
-                <br>
-                <p id="subheader"><b>restaurant interviews</b></p>
-                <p class="description1">We first started by trying to <b>reducing waste from a restaurant's perspective.</b> A lot of apps focus on trying to help <b>restaurants give away EOD leftovers.</b></p>
-                <img  src="images/lemon/restaurants.png" alt="Image placeholder" width="90%">
-                <br></br>
-                <p class="description1">Before going into interviews, our team did a <b>reverse assumptions</b> exercise to come at the food waste problem from a fresher perspective.</p>
-              </div>
               <div class="col-md-12">
+                <br></br>
+                <p id="subheader">reverse assumptions</p>
                 <img  id="center" src="images/lemon/reverse.png" alt="Image placeholder" width="90%">
               </div>
               <div class="col-md-6">
-                <br>
-                <div class="description1">We spoke to several restaurants of different types - buffets, fast food, fresh food, sit-downs - and <b>asked them about their waste/donation habits</b> to see what they currently do at the end of business day. </div>
-              </div>
+                <br></br>
+                <p id="subheader">restaurant interviews</p>
+                <p class="description1">We first started by trying to <b>reducing waste from a restaurant's perspective.</b> A lot of apps focus on trying to help <b>restaurants give away leftovers at the end of the day.</b> We spoke to buffets, fast food, fresh food, and sit-downs and <b>asked them about their waste/donation habits.</b></p>
+                <img  src="images/lemon/restaurants.png" alt="Image placeholder" width="90%">
+                <br></br>
+              </div>ccalho
               <div class="col-md-12">
                 <br>
                 <img  src="images/lemon/restint.png" alt="Image placeholder" width="90%">
               </div>
               <div class="col-md-12">
-                <br>
-                <p class="description1">Speaking to restaurant owners, we came up with some fundamental truths:<br></br>
-
-                01  Most <b>restaurants cook on demand</b>, leading to no excess waste at the end of the day<br>
-
-                02  If certain restaurants have <b>extra food they often reuse it</b> the next day (this is the case with buffets)<br>
-
-                03  Fresh <b>produce</b> must be thrown out by the <b>end of the day</b> (food safety)<br>
-
-                04  Restaurants already optimize how much they’re using, based on <b>customer patterns</b> (Saturdays are popular, Thursdays are not)<br>
-
-                05  Some restaurants prefer donation because <b>reselling food would require extra time and effort</b> beyond hours of operation<br>
-
-                06  Safety or the <b>"freshness"</b> of excess food is an issue<br></br>
-
-                In summary, we found that <b>minimizing waste for restaurants may prove difficult.</b></p>
+                <br></br>
+                <p class="description1"><b>We found that minimizing waste for restaurants may prove difficult.</b></p>
+                <img src="images/lemon/insights2.png" alt="Image placeholder" width="60%">
               </div>
               <!--section 4-->
               <div class="col-md-6">
-                <br>
-                <p id="rowoverview2">04 Pivoting to Personal Waste</p>
-                <p class="description1">From our restaurant interviews, we found that <b>produce is the most wasted type of food</b>, since it goes bad so quickly and cannot be kept due to stringent safety conditions for restaurants.For this reason, we tried to look at produce waste from a different angle: by <b>looking at grocery stores.</b> We contacted local grocery stores, such as Giant Eagle, Aldi, and Trader Joe's and <b>asked about wasted produce and shopper habits.</b>
+                <br></br>
+                <p id="subheader">pivoting to personal waste</p>
+                <p class="description1">We found that <b>produce is the most wasted type of food</b>. Thus, we tried to look at produce waste from the perspective of <b>grocery stores - asking about wasted produce and shopper habits.</b><br><p class="description1"> From our research, we found that <b>grocers overstock for the proper look and feel of the store.</b> According to Business Insider, the fundamental business model of supermarkets dictates:<br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>01</b> Stores be fully stocked so customers don't run to competitors.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>02</b> Customers expect perfect, identically shaped produce.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>03</b> Thus, retailers must stock according to customer expectations.</p>
               </div>
               <div class="col-md-6">
-              </div>
-              <div class="col-md-6">
-                <p class="description1">The responses were overwhelmingly similar across the board. <b>Grocers overstock for the proper look and feel of the store - and with good reason.</b> According to Business Insider, the fundamental business model of supermarkets dictates that:<br></br>01 <b> Stores be fully stocked so customers don't run to competitors.</b><br>02<b> Customers expect perfect, identically shaped produce.</b><br> 03<b> Thus, retailers must stock according to customer expectations. </b><br>
-              </div>
-              <div class="col-md-6">
+                <img src="images/lemon/doug.png" alt="Image placeholder" width="70%">
               </div>
               <div class="col-md-12">
-                <p class="description1">Doug Rauch, the former president of Trader Joe's reaffirms this, stating that <b>if a store has low waste numbers, it can be a sign of an unsatisfactory customer experience.</b> Topping that, consumers lead to 92 billion lbs of waste while retailers lead to less than half at 42 billion lbs. With evidence in the numbers, we pivoted<br>to focus on <b>grocery shoppers and the shopping experience</b> to identify ways to mitigate the food waste problem.</p>
+                <p class="description1">This led us to focus on waste from a <b>personal perspective.</b></p>
                 <img id="numbers" src="images/lemon/pf.png" alt="Image placeholder" width="70%"><br>
               </div>
               <div class="col-md-12">
                 <br>
-                <p id="rowoverview2">05 Ideation</p>
-                <p class="description1">There are a couple parts to the grocery shopping process.<br></p>
+                <p id="subheader">ideation</p>
                 <img src="images/lemon/groceryprocess.png" alt="Image placeholder" width="100%"><br>
               </div>
               <div class="col-md-6">
@@ -212,7 +192,7 @@
               </div>
               <div class="col-md-12">
                 <br>
-                <p class="description1">Along with shopper interviews, we also conducted <b>co-design sessions</b> revolving around an artifact - a plate of spoiled food. The goal was to <b>evoke any sentiments</b> associated with the plate and additionally ask questions about interviewee shopping, storage, and consumption habits. We interviewed around 20 candidates and found that almost <b>80%</b> of candidates had some issue keeping track of their food.</p>
+                <p class="description1">We conducted <b>co-design sessions</b> revolving around an artifact - a plate of spoiled food. The goal was to <b>evoke any sentiments</b> associated with the plate and additionally ask questions about interviewee shopping, storage, and consumption habits. We interviewed around 20 candidates and found that almost <b>80%</b> of candidates had some issue keeping track of food.</p>
 
                 <img  src="images/lemon/codesign.png" alt="Image placeholder" width="90%"><br></br>
 
@@ -221,31 +201,31 @@
               </div>
               <div class="col-md-12">
                 <br></br>
-                <p id="rowoverview2">06 Initial Concept</p>
+                <p id="subheader">initial concept</p>
                 <p class="description1">Based on the initial insights, we created a paper prototype of an all encompassing platform - one which tracked expiration dates, gave meal recipes, and also helped plan out grocery shopping by taking account of your vitals (body height, weight, and diet). We took inspiration from several of our current competitors, like Blue Apron and Hello Chef. Most people felt <b>the service was promising, but too all ecompassing/overwhelming</b> as it tried to do too many things at the same time.</p><br>
                 <img src="images/lemon/feedback.png" alt="Image placeholder" width="65%">
               </div>
               <div class="col-md-12">
                 <br></br>
-                <p id="rowoverview2">07 Iteration</p>
+                <p id="subheader">iteration</p>
                 <p class="description1">During many of our lectures, we would have in-class critiques from local professionals. From these discussions and our first-hand research, we realized <b>the problem stems from users not understanding expiry dates or when food goes bad.</b> From there, we can tackle a lot of the issues customers face. This is when the idea of <b>Lemon</b>, our new service, was born.</p><br>
                   <img src="images/lemon/process2.png" alt="Image placeholder" width="80%"><br></br>
-                <p id="subheader">Storyboarding</p>
+                <p id="subheader">storyboarding</p>
                 <p class="description1">We decided there were a couple different ways to feed information about grocery purchases into our application: through a picture of the grocery receipt, an in-fridge smart camera, or manual entry. We created storyboards and gauged for reactions. The in-fridge smart camera was a huge privacy concern, while a picture of the receipt was the most well received.</p>
                 <img src="images/lemon/storyboard.png" alt="Image placeholder" width="100%"><br></br>
-                <p id="subheader">Mobile App Design</p>
+                <p id="subheader">mobile app design</p>
                 <p class="description1">We called our application 'Lemon' after the lemons that go bad in your fridge without you even knowing, wasting money and produce.</p>
                 <img src="images/lemon/mobdesign.png" alt="Image placeholder" width="100%">
-                <p id="subheader">Video Storyboarding and Production</p>
+                <p id="subheader">video storyboarding + production</p>
                 <img src="images/lemon/video.png" alt="Image placeholder" width="80%"><br>
 
-                <p id="subheader">Logo + Poster Iterations</p>
+                <p id="subheader">logo + poster iterations</p>
                 <img src="images/lemon/logos.png" alt="Image placeholder" width="80%"><br></br>
                 <img src="images/lemon/posters.png" alt="Image placeholder" width="80%">
               </div>
               <div class="col-md-12" id="concept">
                 <br>
-                <p id="rowoverview2">08 Final Concept</p>
+                <p id="subheader">final concept</p>
                 <p class="description1">The final concept is a simple digital service tracks food and prevents waste through scanning your grocery receipts. Specifically it can:<br>01 give reminders to check on produce/track spoilage data<br>02 recommend grocery proportions for the future<br>03 give repurposing ideas (DIY cleaners)</p><br>
               </div>
 
@@ -270,10 +250,10 @@
               </div>
               <div class="col-md-12">
                 <br>
-                <p id="rowoverview2">10 Reflection + Links</p>
+                <p id="rowoverview2">04 Reflection + Links</p>
                 <p id="subheader">Reflection</p>
                 <p class="description1">This project was rewarding for me because this was the first time I really got to lead a team through the entirety of the project, given that it was all my team members' first times taking an HCI class. I also took charge of branding, logo, and visuals, something I typically shy away from. Doing well at the demo was incredible for me and made me feel that I have really taken my practice to the next level!</p>
-                <p id="subheader">Links</p>
+                <p id="rowoverview2"> 05 Links</p>
                 <p class="description1" id="link"><a href="images/lemon/lemonprocess.pdf" style="color:black">Lemon Process Book</a><br>
                 <a href="images/lemon/lemonpitch.pdf" style="color:black">Lemon Pitch Deck</a></p>
 
@@ -286,7 +266,7 @@
             <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             <div class="container text-center">
-              <p id="copyright" align="left">Copyright 2018-2019 © Simran Jobanputra</p>
+              <p id="copyright" align="left">Copyright 2019-2020 © Simran Jobanputra</p>
             </div>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
