final changes to lemon

--- a/nasanew.html
+++ b/nasanew.html
@@ -199,7 +199,7 @@
               <div class="col-md-12">
                 <hr id="pushdown">
                 <br></br>
-                <p id="rowoverview2">04 Future Steps + Reflection</p>
+                <p id="rowoverview2">04 Reflection</p>
                 <p class="description1"> This past summer, I had the incredible opportunity to be a <b>UX Designer for the <a href="https://www.nasa.gov/centers/ames/orgs/exploration-tech/projects/spife.html"><font color="#DAA520">SPIFe team at the NASA AMES Research Center. </font></a></b>I absolutely loved working for the SPIFE team and enjoyed my time in Mountain View, California. The team had a work process similar to that of a startup embedded within a larger organization. Over the summer, I grew my <b>technical design knowledge</b> and was able to learn how to work with software developers in an <b>agile development environment.</b> Currently, my changes on Playbook are being implemented, so the future steps would be to ensure that everything is <b>deployed successfully for the next NEEMO mission.</b> This was my first UX internship and the first time I actually implemented my designs beyond the classroom, which was really exciting!</p>
                 <p class="text-center mb-4" id="uservisual"><img src="images/NASA/pics.png" alt="Image placeholder" class="img-fluid" width="100%"></p>
                 <hr id="pushdown">
