--- a/newlemon.html
+++ b/newlemon.html
@@ -154,7 +154,7 @@
                 <p class="description1">We first started by trying to <b>reducing waste from a restaurant's perspective.</b> A lot of apps focus on trying to help <b>restaurants give away leftovers at the end of the day.</b> We spoke to buffets, fast food, fresh food, and sit-downs and <b>asked them about their waste/donation habits.</b></p>
                 <img  src="images/lemon/restaurants.png" alt="Image placeholder" width="90%">
                 <br></br>
-              </div>ccalho
+              </div>
               <div class="col-md-12">
                 <br>
                 <img  src="images/lemon/restint.png" alt="Image placeholder" width="90%">
@@ -168,13 +168,14 @@
               <div class="col-md-6">
                 <br></br>
                 <p id="subheader">pivoting to personal waste</p>
-                <p class="description1">We found that <b>produce is the most wasted type of food</b>. Thus, we tried to look at produce waste from the perspective of <b>grocery stores - asking about wasted produce and shopper habits.</b><br><p class="description1"> From our research, we found that <b>grocers overstock for the proper look and feel of the store.</b> According to Business Insider, the fundamental business model of supermarkets dictates:<br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>01</b> Stores be fully stocked so customers don't run to competitors.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>02</b> Customers expect perfect, identically shaped produce.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>03</b> Thus, retailers must stock according to customer expectations.</p>
+                <p class="description1">We found that <b>produce is the most wasted type of food</b>. Thus, we tried to look at produce waste from the perspective of <b>grocery stores - asking about wasted produce and shopper habits.</b><br><p class="description1"> From our research, we found that <b>grocers overstock for the proper look and feel of the store.</b> According to Business Insider, the fundamental business model of supermarkets dictates:<br></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>01</b> Stores be fully stocked so customers don't run to competitors.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>02</b> Customers expect perfect, identically shaped produce.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>03</b> Thus, retailers must stock according to customer expectations.<br></br>This led us to focus on waste from a <b>personal perspective.</b></p>
               </div>
               <div class="col-md-6">
-                <img src="images/lemon/doug.png" alt="Image placeholder" width="70%">
+                <br></br>
+                <img id="moveit2" src="images/lemon/doug.png" alt="Image placeholder" width="90%">
               </div>
               <div class="col-md-12">
-                <p class="description1">This led us to focus on waste from a <b>personal perspective.</b></p>
+                <br></br>
                 <img id="numbers" src="images/lemon/pf.png" alt="Image placeholder" width="70%"><br>
               </div>
               <div class="col-md-12">
@@ -184,7 +185,7 @@
               </div>
               <div class="col-md-6">
                 <br>
-                <p class="description1"><br>We spoke to <b>different kinds of grocery shoppers (moms, college students, and working adults)</b> and asked questions on what part of the process made it so difficult to reduce waste and what types of services shoppers wished existed to aid them in this process.<br></p>
+                <p class="description1"><br>We approached <b>different kinds of grocery shoppers (moms, college students, and working adults)</b> and asked questions on needs + desires as a shopper.<br></p>
               </div>
               <div class="col-md-6">
                 <br>
@@ -192,72 +193,73 @@
               </div>
               <div class="col-md-12">
                 <br>
-                <p class="description1">We conducted <b>co-design sessions</b> revolving around an artifact - a plate of spoiled food. The goal was to <b>evoke any sentiments</b> associated with the plate and additionally ask questions about interviewee shopping, storage, and consumption habits. We interviewed around 20 candidates and found that almost <b>80%</b> of candidates had some issue keeping track of food.</p>
-
-                <img  src="images/lemon/codesign.png" alt="Image placeholder" width="90%"><br></br>
-
-                <p class="description1"><b>From both rounds of interviewing and discussion, we found that consumers buy too much food, throw it away quickly and pay little attention to waste.</b></p><br>
-                <img  src="images/lemon/insights.png" alt="Image placeholder" width="60%">
+                <img  src="images/lemon/codesign.png" alt="Image placeholder" width="100%"><br></br>
+                <p class="description1">We conducted <b>co-design sessions</b> revolving around an artifact - a plate of spoiled food. The goal was to <b>evoke sentiments</b> associated with the plate.  We interviewed 20 candidates and found that <b>80%</b> of candidates had some issue keeping track of food. We found that consumers <b>buy too much food, throw it away quickly, and pay little attention to waste.</b></p><br>
+                <img  src="images/lemon/insights2pl.png" id="numbers2" alt="Image placeholder" width="70%">
               </div>
               <div class="col-md-12">
                 <br></br>
                 <p id="subheader">initial concept</p>
-                <p class="description1">Based on the initial insights, we created a paper prototype of an all encompassing platform - one which tracked expiration dates, gave meal recipes, and also helped plan out grocery shopping by taking account of your vitals (body height, weight, and diet). We took inspiration from several of our current competitors, like Blue Apron and Hello Chef. Most people felt <b>the service was promising, but too all ecompassing/overwhelming</b> as it tried to do too many things at the same time.</p><br>
-                <img src="images/lemon/feedback.png" alt="Image placeholder" width="65%">
+                <p class="description1">Based on the initial insights, we created a paper prototype of an all encompassing platform, taking inspiration from the likes of Blue Apron and Hello Chef. Most people felt <b>the service was promising, but too all ecompassing/overwhelming.</b></p><br>
+                <img src="images/lemon/feedback.png"  id="numbers3" alt="Image placeholder" width="65%">
               </div>
               <div class="col-md-12">
                 <br></br>
                 <p id="subheader">iteration</p>
-                <p class="description1">During many of our lectures, we would have in-class critiques from local professionals. From these discussions and our first-hand research, we realized <b>the problem stems from users not understanding expiry dates or when food goes bad.</b> From there, we can tackle a lot of the issues customers face. This is when the idea of <b>Lemon</b>, our new service, was born.</p><br>
-                  <img src="images/lemon/process2.png" alt="Image placeholder" width="80%"><br></br>
+                <p class="description1">Based on in-class critiques from local professionals, we realized <b>the problem stems from users not understanding expiry dates or when food goes bad.</b> This is when the idea of <b>Lemon</b>, our new service, was born.</p><br>
+                  <img src="images/lemon/process2.png" id="numbers" alt="Image placeholder" width="80%"><br></br>
                 <p id="subheader">storyboarding</p>
-                <p class="description1">We decided there were a couple different ways to feed information about grocery purchases into our application: through a picture of the grocery receipt, an in-fridge smart camera, or manual entry. We created storyboards and gauged for reactions. The in-fridge smart camera was a huge privacy concern, while a picture of the receipt was the most well received.</p>
-                <img src="images/lemon/storyboard.png" alt="Image placeholder" width="100%"><br></br>
-                <p id="subheader">mobile app design</p>
-                <p class="description1">We called our application 'Lemon' after the lemons that go bad in your fridge without you even knowing, wasting money and produce.</p>
-                <img src="images/lemon/mobdesign.png" alt="Image placeholder" width="100%">
-                <p id="subheader">video storyboarding + production</p>
-                <img src="images/lemon/video.png" alt="Image placeholder" width="80%"><br>
-
+                <p class="description1">We created storyboards and user tested them. The in-fridge smart camera was a huge privacy concern, while a <b>picture of the receipt</b> was the most well received.</p>
+                <img src="images/lemon/storyboard.png" alt="Image placeholder" width="100%"><br></br><br>
+                <p id="subheader">concept video storyboarding + production</p>
+                <img src="images/lemon/video.png" id="numbers" alt="Image placeholder" width="80%"><br></br>
                 <p id="subheader">logo + poster iterations</p>
-                <img src="images/lemon/logos.png" alt="Image placeholder" width="80%"><br></br>
-                <img src="images/lemon/posters.png" alt="Image placeholder" width="80%">
+                <img src="images/lemon/logos.png" id="numbers" alt="Image placeholder" width="80%"><br></br>
+                <img src="images/lemon/posters.png" id="numbers" alt="Image placeholder" width="80%">
               </div>
-              <div class="col-md-12" id="concept">
+              <!--<div class="col-md-12" id="concept">
                 <br>
                 <p id="subheader">final concept</p>
                 <p class="description1">The final concept is a simple digital service tracks food and prevents waste through scanning your grocery receipts. Specifically it can:<br>01 give reminders to check on produce/track spoilage data<br>02 recommend grocery proportions for the future<br>03 give repurposing ideas (DIY cleaners)</p><br>
               </div>
-
               <div class="col-md-6">
                 <iframe width="500" height="280" src="https://www.youtube.com/embed/eXoqYQcqAIE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
               <div class="col-md-12">
                 <br></br>
                 <img src="images/lemon/screens.png" alt="Image placeholder" width="90%"><br></br><br>
-              </div>
+              </div>-->
               <div class="col-md-12">
-                <p id="rowoverview2">09 Demo Day Pitch + Analysis</p>
+                <br></br>
+                <p id="subheader">demo day pitch</p>
                     <p class="description1">Our team placed third at the demo day pitch where we presented to leaders in the Pittsburgh community! We pitched our idea as a freemium model with a paid premium product. We presented a pitch deck, video, and poster four times to a total of 20 investors. We received great advice on how to continue expanding our idea, starting with a pricing structure other than a freemium model. The investors loved our branding and how simple yet effective the idea was!</p>
                     <img id="shift" src="images/lemon/demoday.png" alt="Image placeholder" width="90%"><br></br>
-                    <p id="subheader">Competitive Analysis</p>
-                    <img src="images/lemon/competitiveanalysis.png" alt="Image placeholder" width="70%"><br></br>
-                    <p id="subheader">Value Flow Model</p>
-                    <img src="images/lemon/valueflow.png" alt="Image placeholder" width="70%"><br></br>
-                    <p id="subheader">PESTLE + POG</p>
-                    <img id="shift" src="images/lemon/pestle.png" alt="Image placeholder" width="80%"><br></br>
-                    <img src="images/lemon/pog.png" alt="Image placeholder" width="70%">
+              </div>
+              <div class="col-md-6">
+                    <p id="subheader">business analysis</p>
+                    <img src="images/lemon/competitiveanalysis.png" alt="Image placeholder" width="80%">
+              </div>
+              <div class="col-md-6">
+                    <img src="images/lemon/valueflow.png" id="onlinefacts" alt="Image placeholder" width="80%">
+              </div>
+              <div class="col-md-6">
+                    <br>
+                    <img id="shift" src="images/lemon/pestle.png" alt="Image placeholder" width="80%">
+              </div>
+              <div class="col-md-6">
+                  <img src="images/lemon/pog.png" alt="Image placeholder" width="80%">
               </div>
               <div class="col-md-12">
+                <hr id="pushdown">
                 <br>
-                <p id="rowoverview2">04 Reflection + Links</p>
-                <p id="subheader">Reflection</p>
-                <p class="description1">This project was rewarding for me because this was the first time I really got to lead a team through the entirety of the project, given that it was all my team members' first times taking an HCI class. I also took charge of branding, logo, and visuals, something I typically shy away from. Doing well at the demo was incredible for me and made me feel that I have really taken my practice to the next level!</p>
+                <p id="rowoverview2">04 Reflection</p>
+                <p class="description1">This project was rewarding for me because this was the first time I really got to <b>lead a team through the entirety of the project</b>, given that it was all my team members' first times taking an HCI class. I also <b>took charge of branding, logo, and visuals</b>, something I typically shy away from. Doing well at the demo was incredible for me and made me feel that I have really taken my practice to the next level! In the future, I would want to flesh out the finances of the product (how we make money) and also do more primary research/guerilla research to validate market need.</p>
+              </div>
+              <div class="col-md-12">
+                <hr id="pushdown">
                 <p id="rowoverview2"> 05 Links</p>
-                <p class="description1" id="link"><a href="images/lemon/lemonprocess.pdf" style="color:black">Lemon Process Book</a><br>
-                <a href="images/lemon/lemonpitch.pdf" style="color:black">Lemon Pitch Deck</a></p>
-
-
+                <p class="description1" id="link"><a href="images/lemon/lemonprocess.pdf"><font color="#DAA520">Lemon Process Book</font></a><br>
+                <a href="images/lemon/lemonpitch.pdf"><font color="#DAA520">Lemon Pitch Deck</font></a></p>
               </div>
     <footer class="templateux-footer">
       <div class="container-fluid">
