spacing issues for lemon

--- a/newlemon.html
+++ b/newlemon.html
@@ -232,7 +232,7 @@
               <div class="col-md-12">
                 <br></br>
                 <p id="subheader">demo day pitch</p>
-                    <p class="description1">Our team placed third at the demo day pitch where we presented to leaders in the Pittsburgh community! We pitched our idea as a freemium model with a paid premium product. We presented a pitch deck, video, and poster four times to a total of 20 investors. We received great advice on how to continue expanding our idea, starting with a pricing structure other than a freemium model. The investors loved our branding and how simple yet effective the idea was!</p>
+                    <p class="description1">Our team placed <b>third at the demo day pitch</b> where we presented to leaders in the Pittsburgh community! We pitched our idea as a <b>freemium model with a paid premium product.</b> We presented a pitch deck, video, and poster four times to a total of 20 investors. We received great advice on how to continue expanding our idea, starting with a pricing structure other than a freemium model. The investors <b>loved our branding</b> and how simple yet effective the idea was!</p>
                     <img id="shift" src="images/lemon/demoday.png" alt="Image placeholder" width="90%"><br></br>
               </div>
               <div class="col-md-6">
@@ -243,8 +243,8 @@
                     <img src="images/lemon/valueflow.png" id="onlinefacts" alt="Image placeholder" width="80%">
               </div>
               <div class="col-md-6">
-                    <br>
-                    <img id="shift" src="images/lemon/pestle.png" alt="Image placeholder" width="80%">
+                    <br></br>
+                    <img id="shift" src="images/lemon/pestle.png" alt="Image placeholder" width="90%">
               </div>
               <div class="col-md-6">
                   <img src="images/lemon/pog.png" alt="Image placeholder" width="80%">
@@ -253,7 +253,7 @@
                 <hr id="pushdown">
                 <br>
                 <p id="rowoverview2">04 Reflection</p>
-                <p class="description1">This project was rewarding for me because this was the first time I really got to <b>lead a team through the entirety of the project</b>, given that it was all my team members' first times taking an HCI class. I also <b>took charge of branding, logo, and visuals</b>, something I typically shy away from. Doing well at the demo was incredible for me and made me feel that I have really taken my practice to the next level! In the future, I would want to flesh out the finances of the product (how we make money) and also do more primary research/guerilla research to validate market need.</p>
+                <p class="description1">This project was rewarding for me because this was the first time I really got to <b>lead a team through the entirety of the project</b>, given that it was all my team members' first times taking an HCI class. I also <b>took charge of branding, logo, and visuals</b>, something I typically shy away from. Doing well at the demo was incredible for me and made me feel that I have really taken my practice to the next level! In the future, I would want to flesh out <b>how we make money</b> and also do more <b>primary research/guerilla research</b> to validate market need.</p>
               </div>
               <div class="col-md-12">
                 <hr id="pushdown">
