--- a/tiles.html
+++ b/tiles.html
@@ -48,7 +48,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center intro">
           <!-- <div class="col-md-14" data-aos="fade-up" > -->
-            <img src="images/tiles/tiles.png" alt="Image placeholder" width="1286" height="750">
+            <img src="images/tiles/coverphoto.png" alt="Image placeholder" width="1286" height="750">
        <!--    </div> -->
         </div>
       </div>
@@ -64,7 +64,7 @@
             <div class="row work-detail">
               <div class="col-md-3">
                 <span class=caption>Team</span>
-                <p class="description1">Elena Deng (BDesign), Emily Wu (MechE), Saiganesh Swaminathan (PhD HCII), Kristin
+                <p class="description1"><a href="https://www.elenadeng.com/"><font color="#DAA520">Elena Deng</font></a> (BDesign), Emily Wu (MechE), Saiganesh Swaminathan (PhD HCII), Kristin
                 Williams (PhD HCII), Patrick Carrington (Assistant Professor) </p>
               </div>
               <div class="col-md-3">
