edited the darpa page completely!

--- a/darpa.html
+++ b/darpa.html
@@ -62,7 +62,7 @@
             <div class="row work-detail">
               <div class="col-md-3">
                 <span class=caption>Team</span>
-                <strong>Amy Lin, Cameron Burgess, Hamza Qureshi, Linda Xia</strong>
+                <p class="description1"><a href="https://www.amydianelin.com/"><font color="#DAA520">Amy Lin</font></a>,<a href="https://cameron-burgess.com/"><font color="#DAA520">Cameron Burgess</font></a>, Hamza Qureshi, Linda Xia/p>
               </div>
               <div class="col-md-3">
                 <span class=caption>Time</span>
