--- a/tiles.html
+++ b/tiles.html
@@ -60,12 +60,11 @@
         <div class="row justify-content-center">
           <div class="col-md-14">
             <p id="rowoverview2">01 Overview</p>
-            <p id="subheader">Quick Summary</p>
             <div class="row work-detail">
               <div class="col-md-3">
                 <span class=caption>Team</span>
-                <p class="description1"><a href="https://www.elenadeng.com/"><font color="#DAA520">Elena Deng</font></a> (BDesign), Emily Wu (MechE), Saiganesh Swaminathan (PhD HCII), Kristin
-                Williams (PhD HCII), Patrick Carrington (Assistant Professor) </p>
+                <p class="description1"><a href="https://www.elenadeng.com/"><font color="#DAA520">Elena Deng</font></a>, <a href="https://www.emilyitowu.com/about-1"><font color="#DAA520">Emily Wu</font></a>, <a href="http://www.saiganesh.net/"><font color="#DAA520">Saiganesh Swaminathan</font></a>, <a href="http://www.cs.cmu.edu/~kmwillia/"><font color="#DAA520"> Kristin
+                Williams</font></a>, <a href="http://www.patrickcarrington.com/"><font color="#DAA520">Patrick Carrington</font></a></p>
               </div>
               <div class="col-md-3">
                 <span class=caption>Time</span>
@@ -87,6 +86,10 @@
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Project Overview</span>
                 <p class="description1"><b>Independent mobility remains a challenge experienced by people who are blind or visually impaired</b>as a person may reach a general area but may encounter difficulty or lack the information to get to a very specific destination.  Currently available navigation techniques (GPS, Bluetooth beacons, etc) are capable of supporting navigation to within 5m of a desired target, however, are <b>not capable of robust navigation and spatial tasks in the 2-3 meter range.</b> We frame this problem as the <b>"last meter problem".</b> Our approach to solving this is by using tactile surfaces or <b>textured ground surfaces</b> that one can sense through touch or by walking on them, perhaps in combination with some bluetooth/audio tool.</p>
+              </div>
+              <div class="col-md-8">
+                <span class=caption id="rowoverview">Impact</span>
+                <p class="description1">Create an interactive tactile tile that can be used to improve the 'last meter problem' that is experienced by the blind or visually impaired. The hope is that the tactile tiles can be sold in a kit and used as a low-cost method for solving this problem.</p>
               </div>
             </div>
           <!-- </div> -->
