--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <div class="project-hover">
                 <div class="project-hover-inner">
                   <h2>Tactile Tiles</h2>
-                  <h4>Survey Design + Physical Prototyping</h4>
+                  <h4>Accessibility Design</h4>
                 </div>
               </div>
             </a>
@@ -136,7 +136,7 @@
             </a>
           </div>
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <a class="project animsition-link" href="darpa.html">
+            <a class="project animsition-link" href="darpa2.html">
               <figure>
                 <img src="images/DARPA/DARPA1.jpg" alt="Free Template" class="img-fluid">
               </figure>
